# picalendar-lcd

./: .gitignore  README.md  pyproject.toml
picalendar/: main.py  quickstart.py
picalendar/api/: fetch_events.py  show_events.py
