[tool.poetry]
name = "picalendar-cli"
version = "0.1.0"
description = "Display upcoming events on a 16x2 LCD"
authors = ["Damian Tabor <zettie008@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
google-api-python-client = "^1.12.8"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.2"
smbus = "^1.1.post2"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
